--- a/DOER/Base.lproj/Main.storyboard
+++ b/DOER/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="ure-jS-EHj" id="cmz-dP-Cpz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Doer" id="5Wz-zU-1iO"/>
+                    <navigationItem key="navigationItem" title="Doer" id="5Wz-zU-1iO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="CnO-60-SkA">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="ure-jS-EHj" id="UpV-tM-gbg"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ra8-UK-aLu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
