App now uses Realm to manage persistent data.

--- a/DOER/Views/Base.lproj/Main.storyboard
+++ b/DOER/Views/Base.lproj/Main.storyboard
@@ -115,5 +115,5 @@
             <point key="canvasLocation" x="518" y="27"/>
         </scene>
     </scenes>
-    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+    <color key="tintColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
